--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}\\server.js",
-            "envFile": "${workspaceFolder}\\.env",
+            //"envFile": "${workspaceFolder}\\.env",
         }
     ]
 }
