--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "test": "./node_modules/.bin/cross-env NODE_ENV=test mocha --timeout 10000 -- test/*.test.js"
   },
   "dependencies": {
-    "ansi2html-extended": "0.0.4",
-    "async": "^2.6.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
@@ -35,30 +33,24 @@
     "express-session": "~1.15.1",
     "forever": "~0.15.1",
     "jade": "^1.11.0",
-    "jsonwebtoken": "^8.4.0",
+    "md5": "^2.2.1",
     "method-override": "~2.3.5",
+    "mogoose": "^3.1.8",
     "mongodb": "^3.1.6",
-    "mongoose": "~4.11.0",
+    "mongoose": "^4.13.17",
     "mongoose-user": "~0.0.1",
     "morgan": "^1.9.1",
-    "mysql": "^2.16.0",
     "node-schedule": "^1.3.1",
-    "node-sms-send": "^0.1.3",
-    "nodemailer": "^5.1.1",
     "passport": "~0.3.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "~1.0.0",
-    "pg": "^7.8.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
-    "ssh2": "^0.7.1",
-    "systeminformation": "^3.54.0",
     "uniqid": "^5.0.3",
     "viber-bot": "^1.0.13",
     "winston": "~2.3.0",
     "winston-console-formatter": "^1.0.0-beta.3",
-    "ws": "^6.1.3",
-    "xoauth2": "^1.2.0"
+    "ws": "^6.1.3"
   },
   "devDependencies": {
     "babel-eslint": "~7.2.1",
