--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "./node_modules/.bin/cross-env NODE_ENV=test mocha --timeout 10000 -- test/*.test.js"
   },
   "dependencies": {
+    "async": "^2.6.2",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
